--- a/Uwizard/Resources/Languages/Strings.it.resx
+++ b/Uwizard/Resources/Languages/Strings.it.resx
@@ -112,10 +112,10 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="GameTBDAddUpdate" xml:space="preserve">
     <value>{0} {0:jeu ajouté:jeux ajoutés} et {0:jeu:jeux} mis à jour depuis gametdb.com</value>
@@ -765,7 +765,7 @@
     <value>Yes</value>
     <comment>129</comment>
   </data>
-  <data name="ZeroUnusedData" xml:space="preserve">
+  <data name="WiiUGameScrubInformation" xml:space="preserve">
     <value>Zeroes unused data. This allows the backup to be compressed more efficiently using NTFS native compression.</value>
     <comment>108</comment>
   </data>
